committed some changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
+
 <html>
   <head>
     <title>Fs Tech</title>
-    <style>
-      h1 {
-        font-size: 25px;
-        font-family: roboto;
-        font-weight: normal;
-        color: rgb(200,100,0);
-        text-align: center;
-        
-      }
-    </style>
+    
+    
     <body>
-      <h1>FS Tech</h1>
-      <h1>FS Tech 2</h1>
+      {% include 'nav.html' %}
       
-
-  
-
-      
+            
       {% include 'order_template.html' %}
       
         
