--- a/templates/order_template.html
+++ b/templates/order_template.html
@@ -19,29 +19,23 @@ tr:hover {background-color: #D6EEEE;}
   <caption>Order details</caption>
         <thead>
           <tr>
-            <th>S.no</th>
             <th>sale order item code</th>
             <th>Order number</th>
             <th>SKU Code</th>
             <th>status</th>
             <th>Action</th>
+            <th>Remarks</th>
           </tr>
         </thead>
         <tbody>
           {% for order in orders %}
           <tr>
-            <td>{{ order['id'] }}</td>
-            <td>{{ order['unique_id'] }}</td>
-            <td>{{ order['order no'] }}</td>
+            <td>{{ order['soic'] }}</td>
+            <td>{{ order['order_no'] }}</td>
             <td>{{ order['sku'] }}</td>
-            <td>{{ order['status'] }}</td>
-            <td style="background-color:#FF0000">
-              <select>
-                <option value="cancel">Cancel</option>
-                <option value="priority">On Priority</option>
-                <option value="hold">On Hold</option>
-              </select>
-            </td>
+            <td>{{ order['tstatus'] }}</td>
+            <td>{{ order['faction'] }}</td>
+            <td>{{ order['remarks'] }}</td>
           </tr>
           
           {% endfor %}
