--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,8 @@
       
             
       {% include 'order_template.html' %}
+
+      {% include 'production_tracking.html' %}
       
         
 
