added orders templates and added functionality to add new orders to the database

--- a/templates/order_template.html
+++ b/templates/order_template.html
@@ -31,7 +31,7 @@ tr:hover {background-color: #D6EEEE;}
         <tbody>
           {% for order in orders %}
           <tr>
-            <td><a href="https://www.google.com" target="_blank">{{ order['soic'] }}</a></td>
+            <td><a href="order_cancel.html" target="_blank">{{ order['soic'] }}</a></td>
             <td>{{ order['order_no'] }}</td>
             <td>{{ order['sku'] }}</td>
             <td>{{ order['tstatus'] }}</td>
