--- a/templates/single_order.html
+++ b/templates/single_order.html
@@ -46,6 +46,8 @@ tr:hover {background-color: #D6EEEE;}
           
           {% endfor %}
 
+          {% include 'order_cancel.html' %}
+
           
         </tbody>
       </table>
